Fixed header when viewing on smaller screen

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,31 @@ body {
 
 
 /* For smaller screens */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 639px) {
+    header {
+        padding: 0 10px;
+    }
+
+    #logoType {
+        margin-left: 6%;
+        margin-top: -10px;
+    }
+
+    #searchForm {
+        margin-left: 30px;
+    }
+
+    #logoWrapper {
+        height: 40px;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+    }
+
+    #headerSearchBar {
+        padding: 0;
+    }
+
     .weatherGraphic {
         padding: 0;
     }
